# elaiRoo

./: .gitignore  .roomodes  .tool-versions  CORREÇÕES_REALIZADAS.md  JINA_MCP_CONFIG_COMPLETE.md  Plano_Consolidacao_Comex.md  README.md  Resumo_Fazcomex.md  analise_alteracoes_bug_perfil_configuracao.md  debug-sqlite-error.md  deepseek-r1-fix.md  exemplo de busca fiscal.md  explorador-arvore-aprimorado.html  explorador-arvore.html  index.md  jest.config.mjs  jest.setup.js  package-lock.json  package.json  plano_correcao_bug_api_busca.md  pnpm-lock.yaml  pnpm-workspace.yaml  resultados_pesquisa_gestao_exportacao.md  resumo_pesquisa_du-e.md  styles.css  temp_analise_comparativa.txt  temp_analise_geral.txt  test-direct-deep-research.js  test-integration.js  test-search-config.js  test-type-check.js  test_web_search.md  turbo.json  venda-flores.html  waCheck.md
.husky/: pre-commit  pre-push
.roo/: 01-rules.md  mcp.json
apresentacoes/: analise-modulos-comex-v1.pptx  module.pptx
deep/: deep_research_native_implementation_plan.md  plano deep tasks
docs/: # Prompt de Sistema para Especialista em.md  API.md  Análise Completa Roo Code.md  TOOLS.md  architecture.md  plano-implementacao-web-search.md  planoB.md  search_api_config_tasks.md
e2e/: DEMO.md  README.md  run-tests-demo.sh  tsconfig.json
src/services/mcp/jina-advanced-search/: README_CONFIG.md  __init__.py  main.py  mcp-config.json  pyproject.toml  test_jina_mcp.py
src/services/mcp/jina-advanced-search/utils/: __init__.py  config_manager.py  document_manager.py  jina_client.py  results_aggregator.py
(+531 files in other folders)
