[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jina-advanced-search"
version = "1.0.0"
description = "Advanced internet search tool using Jina AI framework with multimodal capabilities, modular pipelines, and hybrid ranking"
readme = "README.md"
authors = [
    {name = "Roo Team", email = "team@roo.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.3.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.8.0"
]

[project.urls]
"Homepage" = "https://github.com/roo-ai/jina-advanced-search"
"Bug Tracker" = "https://github.com/roo-ai/jina-advanced-search/issues"

[tool.hatch.build.targets.wheel]
only-include = ["src/jina_advanced_search"]
sources = ["src"]

[project.scripts]
jina-advanced-search = "main:run_server"
